Tinder Card swiping done. When image is swiped, the swipe breaks the screen size -> needs fix.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   overflow: hidden;
+  max-width: 960px;
 }
 
 input[type=checkbox] {
